[package]
name = "erc-5564-bn254"
version = "0.1.0"
edition = "2021"

[lib]
name = "erc_5564_bn254"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
ffi = []
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rln = "0.3.1"
ark-std = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
ark-ff = "0.4.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.1"
ark-serialize = "0.4.1"

[dev-dependencies]
serde_json = "1.0.96"
color-eyre = "0.6.2"
